# goofish-ai-customer

./: .env.example  .gitignore  .lefthook.yml  CLAUDE.md  Makefile  README.md  main.py  pyproject.toml  requirements.txt
agents/: classify_agent.py  default_agent.py  graph.py  price_agent.py  product_agent.py  router.py  skill_registry.py  state.py
agents/nodes/: __init__.py  classify.py  default.py  price.py  product.py  skill_executor.py
auth/: cookie_manager.py  cookie_refresher.py  token_manager.py
config/: products.yaml  settings.yaml
config/prompts/: classify_prompt.md  default_prompt.md  price_prompt.md  product_prompt.md
config/rules/: global.md
config/skills/default/: skill.md
config/skills/price/: skill.md
config/skills/product/: skill.md
core/: browser_channel.py  channel.py  websocket_channel.py
docs/: langgraph-migration.md
docs/plans/: 2026-03-13-design.md  2026-03-13-implementation-plan.md  2026-03-17-skills-system-design.md  2026-03-17-skills-system.md
docs/superpowers/plans/: 2026-03-14-langgraph-refactor.md
docs/superpowers/specs/: 2026-03-14-langgraph-refactor-design.md
services/: llm_client.py  tools.py  xianyu_api.py  xianyu_utils.py
storage/: context_manager.py
tests/: conftest.py  test_agents.py  test_classify_node.py  test_context_manager.py  test_cookie_manager.py  test_default_node.py  test_edge_cases.py  test_graph.py  test_intent_router.py  test_llm_client.py  test_price_node.py  test_product_node.py  test_real_llm_langgraph.py  test_router.py  test_skill_executor.py  test_skill_registry.py  test_state.py  test_token_manager.py  test_tools.py  test_websocket_channel.py  test_xianyu_api.py  test_xianyu_utils.py
