[project]
name = "goofish-ai-customer"
version = "1.0.0"
description = "AI customer service for Goofish"
requires-python = ">=3.11"
dependencies = [
    "websockets>=12.0",
    "playwright>=1.40.0",
    "httpx>=0.25.0",
    "openai>=1.12.0",
    "loguru>=0.7.0",
    "PyYAML>=6.0",
    "python-dotenv>=1.0.0",
    "ruff>=0.8.0",
    "lefthook>=0.8.0",
    "langgraph>=1.1.2",
    "langchain-openai>=1.1.11",
    "langchain-core>=1.2.19",
    "tenacity>=9.1.4",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "auth*", "data*", "config*", "agents*", "storage*", "services*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.6.0",
    "pytest-timeout>=2.3.0",
    "coverage[toml]>=7.6.0",
]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["."]
omit = ["*/tests/*", "*/__pycache__/*", "*/.venv/*"]
branch = true

[tool.coverage.report]
fail_under = 80
